--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ye</groupId>
+    <groupId>com.ye.springcloud</groupId>
     <artifactId>sc-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <modules>
-        <module>test</module>
-    </modules>
+
     <packaging>pom</packaging>
 
     <name>sc-parent</name>
@@ -21,7 +19,14 @@
         <relativePath/>
     </parent>
 
-	
+    <modules>
+        <module>eureka-server</module>
+        <module>eureka-client</module>
+        <module>service-ribbon</module>
+        <module>service-feign</module>
+    </modules>
+
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
