--- a/service-feign/src/main/resources/application.yml
+++ b/service-feign/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8675
+  port: 8765
 
 spring:
   application:
@@ -8,4 +8,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone : http://loclahost:8761/eureka/
+      defaultZone : http://localhost:8761/eureka/
