--- a/service-zuul/pom.xml
+++ b/service-zuul/pom.xml
@@ -10,11 +10,9 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <artifactId>service-zuul</artifactId>
 
-    <artifactId>service-ribbon</artifactId>
-    <packaging>jar</packaging>
-
-    <name>service-ribbon</name>
+    <name>service-zuul</name>
 
     <dependencies>
         <dependency>
@@ -27,11 +25,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
     </dependencies>
 
