--- a/service-hi/pom.xml
+++ b/service-hi/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>eureka-client</artifactId>
+    <artifactId>service-hi</artifactId>
     <packaging>jar</packaging>
 
     <name>eureka-client</name>
