--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <modules>
         <module>eureka-server</module>
-        <module>eureka-client</module>
+        <module>service-hi</module>
         <module>service-ribbon</module>
         <module>service-feign</module>
         <module>service-zuul</module>
